--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -2,19 +2,6 @@
   "version": "2.0.0",
   "tasks": [
     {
-      "type": "func",
-      "label": "func: host start",
-      "command": "host start",
-      "problemMatcher": "$func-python-watch",
-      "isBackground": true,
-      "dependsOn": "pip install (functions)",
-      "options": {
-        "env": {
-          "PYTHON_ISOLATE_WORKER_DEPENDENCIES": "1"
-        }
-      }
-    },
-    {
       "label": "pip install (functions)",
       "type": "shell",
       "osx": {
@@ -27,6 +14,14 @@
         "command": "${config:azureFunctions.pythonVenv}/bin/python -m pip install -r requirements.txt"
       },
       "problemMatcher": []
+    },
+    {
+      "type": "func",
+      "label": "func: host start",
+      "command": "host start",
+      "problemMatcher": "$func-python-watch",
+      "isBackground": true,
+      "dependsOn": "pip install (functions)"
     }
   ]
 }
